--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 28
@@ -35,4 +36,13 @@ dependencies {
     api 'com.orhanobut:logger:2.2.0'
     //工具包
     api 'com.blankj:utilcode:1.18.2'
+    //Fragment依赖
+    api 'me.yokeyword:fragmentation:1.0.3'
+    api 'me.yokeyword:fragmentation-swipeback:1.0.3'
+    //Banner依赖,轮播图用
+    api 'com.bigkoo:convenientbanner:2.0.5'
+    api 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
+    //ButterKnife依赖
+    api 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
