--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.horizon.app.core"/>
+          package="com.horizon.app.core">
+
+    <application>
+        <activity android:name=".activities.StoreActivity">
+        </activity>
+    </application>
+
+</manifest>
