--- a/core/build.gradle
+++ b/core/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     //ButterKnife依赖
     api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //Loader依赖
+    api 'com.wang.avi:library:2.1.3'
 }
