--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <application>
         <activity android:name=".activities.StoreActivity">
         </activity>
+        <activity android:name=".activities.TestActivity">
+        </activity>
     </application>
 
 </manifest>
