--- a/core/build.gradle
+++ b/core/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //Loader依赖
     api 'com.wang.avi:library:2.1.3'
+    //okHttp3依赖
+    api 'com.squareup.okhttp3:okhttp:3.12.1'
 }
